HelperEnvInfo: -getMemoryTotal() and getMemoryFree() added
HelperGraphic:
-getColorHex() added

HelperIO:
-getTemporaryFile() added

Context:
-Release information changed

ControlProcess:
-Runtime.getRuntime().exec() replaced by ProcessBuilder